--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 :root {
   /* Colours */
-  --color-bg: #cfceca; /* page background /*
+  --color-bg: white; /* page background /*
 
   /* Header */
   --color-head-bg: #625e5c;
