--- a/css/custom.css
+++ b/css/custom.css
@@ -3,19 +3,19 @@
   --color-bg: white; /* page background /*
 
   /* Header */
-  --color-head-bg: #625e5c;
+  --color-head-bg: #d7652c;
 
   /* Logotype */
-  --color-logotype-bg: #2a2828;
-  --color-text-logotype: #c1bfb8;
+  --color-logotype-bg: #b33a3a;
+  --color-text-logotype: #a2945f;
   --font-logotype-size: 1rem;
 
   /* Global menu */
-  --color-menu-bg: #5a5b5e;
+  --color-menu-bg: #2b4592;
   /* Links */
-  --color-link-bg: #78766e;
+  --color-link-bg: #d5b94b;
   --color-link-hover: #fff; /* used */
-  --color-link-active: #99958f; /* used */
+  --color-link-active: #cb9038; /* used */
   --border-radius-links: 1px;
 
   /* Headlines og rubrik */
